<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ac_login_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ac_login_tv_matricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edt_text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:gravity="center"
            android:hint="@string/ac_login_matricula" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ac_login_tv_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:background="@drawable/background_edt_text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/ac_login_senha" />
        <Button
            android:id="@+id/ac_login_bt_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:background="@drawable/background_edt_text"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/ac_login_entrar"/>
    </LinearLayout>

</RelativeLayout>