<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.FormContribuinteActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ac_form_contribuinte_tv_title"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ac_form_contribuinte_ed_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edt_text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/ac_form_contribuinte_nome"
                android:inputType="textImeMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_data_nascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_data_nascimento"
                    android:inputType="numberSigned" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_cpf"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_rg"
                    android:inputType="numberSigned" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/frag_contribuinte_form_ed_expedidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_expedidor"
                    android:inputType="textImeMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_cnh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_cnh"
                    android:inputType="numberSigned" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_cnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_cnpj"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_telefone"
                    android:inputType="numberSigned" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/ac_form_contribuinte_celular"
                    android:inputType="numberSigned" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ac_form_contribuinte_ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_edt_text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/endereco_email"
                android:inputType="textImeMultiLine" />

            <TextView
                android:id="@+id/ac_form_contribuinte_tv_title_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/logradouro"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/endereco_uf"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/ac_form_contribuinte_sp_uf"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="2"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background_spinner" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/endereco_cidade"
                    android:inputType="textImeMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/endereco_bairro"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/ac_form_contribuinte_sp_bairro"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_spinner" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/endereco_logradouro"
                    android:inputType="textImeMultiLine" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_bloco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/endereco_bloco"
                    android:inputType="textImeMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/endereco_logradouro"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/endereco_subunidade"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/ac_form_contribuinte_sp_tipo_logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_spinner" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/ac_form_contribuinte_sp_tipo_subunidade"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/endereco_cep"
                    android:inputType="numberSigned" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ac_form_contribuinte_ed_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/background_edt_text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/endereco_numero"
                    android:inputType="numberSigned" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ac_form_contribuinte_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ac_form_contribuinte_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>